--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hackernews",
-  "homepage": "https://github.com/Abrellr/hackernews",
+  "homepage": "https://Abrellr.github.io/hackernews",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,12 +14,13 @@
     "react-spinners": "^0.9.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
